<resources>
    <string name="app_name">My QR Scan App</string>
    <string name="pagestyle">Chào bạn mới</string>
    <string name="quote">Sử dụng app tích điểm và đổi những ưu đãi chỉ \n dành riêng cho thành viên bạn nhé !</string>
    <string name="letbuy">Let\'s buy something for your experience !</string>
    <string name="login">Đăng nhập</string>
    <string name="buynow">Mua ngay</string>
    <string name="coolmaster">coolmaster</string>
    <string name="product">Sản phẩm</string>
    <string name="promotion">Khuyến mãi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_generate">GenerateActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>