<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_above="@+id/bottomNavigationView"
    android:contentDescription="@string/app_name">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="3dp"
            android:text="@string/pagestyle"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/buysth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hello"
            android:layout_alignStart="@id/hello"
            android:layout_marginBottom="30dp"
            android:text="@string/letbuy" />

        <RelativeLayout
            android:id="@+id/loginblock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buysth"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/homepage_background">


            <TextView
                android:id="@+id/quote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/quote"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/loginbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/quote"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/lognbutton"
                android:text="@string/buynow"
                android:textAlignment="center"
                android:textColor="#F46D36"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/rtx"
                android:layout_width="348dp"
                android:layout_height="120dp"
                android:layout_below="@id/loginbutton"
                android:layout_centerInParent="false"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/coolmaster"
                app:srcCompat="@drawable/rtx"
                tools:ignore="ImageContrastCheck" />

        </RelativeLayout>

        <View
            android:id="@+id/line"
            android:layout_width="150dp"
            android:layout_height="4dp"
            android:layout_below="@id/loginblock"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/line"/>



        <LinearLayout
            android:id="@+id/store_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/line"
            android:background="@drawable/lognbutton"
            android:baselineAligned="false">

            <RelativeLayout
                android:id="@+id/products_list"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/productimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/product_01"
                    android:adjustViewBounds="true"
                    android:maxWidth="100dp"
                    android:maxHeight="100dp"
                    android:scaleType="fitCenter"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/product" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/productimage"
                    android:layout_centerHorizontal="true"
                    android:text="@string/product"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <View
                android:id="@+id/pp"
                android:layout_width="2dp"
                android:layout_height="90dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/line"/>

            <RelativeLayout
                android:id="@+id/store_click"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/storeimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/store_01"
                    android:adjustViewBounds="true"
                    android:maxWidth="100dp"
                    android:maxHeight="100dp"
                    android:scaleType="fitCenter"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/promotion" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/storeimage"
                    android:layout_centerHorizontal="true"
                    android:text="@string/promotion"
                    android:textStyle="bold"/>
            </RelativeLayout>

        </LinearLayout>

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/promotion_slide"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_below="@id/store_product"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#F56D36"
            app:sliderScrollTimeInSec="2"
            app:sliderStartAutoCycle="true">

        </com.smarteist.autoimageslider.SliderView>

    </RelativeLayout>

</ScrollView>
</LinearLayout>